--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,6 @@
 
 #login{
     max-width: 500px;
-    height: 600px;
     margin: auto;
     background: white;
     padding: 10px;
@@ -46,6 +45,16 @@
     width: 120px;
     height: 120px;
     animation: spin 2s linear infinite;
+}
+
+.alert {
+    display: none;
+    padding: 20px;
+    background-color: #f44336;
+    color: white;
+    opacity: 1;
+    transition: opacity 0.6s;
+    margin-bottom: 15px;
 }
 
 input[type="text"],.input[type="email"],input[type="password"] {
