--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,28 @@
 #header{
-    height: 200px;
-    background: red;
+    height: auto;
+    background: #4CAF50;
     display: none;
 }
 
+#headerAcciones{
+    max-width: 200px;
+    margin: auto;
+    padding: 10px;
+}
+
+.btn-header{
+    margin: 5px;
+}
+
 #main{
-    height: 600px;
-    background: green;
+    height: auto;
+    background: #ff9c33;
+    padding: 20px;
 }
 
 #footer{
-    height: 200px;
-    background: blue;
+    height: 150px;
+    background: LightBlue;
     display: none;
 }
 
@@ -33,6 +44,37 @@
     bottom: 0;
     background-color: rgba(0,0,0,0.5);
     z-index: 999; 
+}
+
+.inLine{
+    display: inline-block;
+    width: 100%;
+}
+
+.likeTitle{
+    font-size: 25px;
+    color: white;
+    font-style: italic;
+    font-variant: small-caps;
+    -webkit-font-smoothing: antialiased;
+}
+
+.pointer{
+    cursor: pointer;
+}
+
+.displayBlock{
+    display: block;
+}
+
+.butonRigth{
+    float: right;
+    margin: 15px;
+    padding: 10px;
+}
+
+.borrarComida, .borrarBebida{
+    margin-right: 8px;
 }
 
 .loader {
@@ -57,6 +99,60 @@
     margin-bottom: 15px;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+}
+
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px 20px 60px 20px;
+    border: 1px solid #888;
+    width: 30%; 
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.centerTable{
+    max-width: 900px;
+    margin: auto;
+    padding: 10px;
+}
+
+.btnFixedVolver{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 15%;
+    margin-left: 150px;
+}
+
+a{
+    cursor: pointer;
+}
+
 input[type="text"],.input[type="email"],input[type="password"] {
     height: 45px;
     width: 100%;
@@ -70,4 +166,120 @@ input[type="text"],.input[type="email"],input[type="password"] {
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+#snackbar {
+    visibility: hidden; 
+    min-width: 250px; 
+    margin-left: -125px; 
+    background-color: #333; 
+    color: #fff; 
+    text-align: center;
+    border-radius: 2px; 
+    padding: 16px; 
+    position: fixed; 
+    z-index: 1; 
+    left: 50%; 
+    bottom: 30px;
+}
+
+
+#snackbar.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;} 
+    to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;} 
+    to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+}
+
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
 }
