--- a/styles.css
+++ b/styles.css
@@ -67,9 +67,24 @@
     display: block;
 }
 
+.buttonMTop{
+    margin-top: 10px;  
+}
+
+#editarPerfilModal{
+    text-align: center;
+}
+
 .butonRigth{
     float: right;
     margin: 15px;
+    padding: 10px;
+}
+
+#modificarusuarioDiv{
+    max-width: 400px;
+    margin: auto;
+    background: #ff9c33;
     padding: 10px;
 }
 
@@ -121,6 +136,12 @@
     width: 30%; 
 }
 
+@media (max-width: 1000px) {
+  .modal-content{
+    width: 80%;
+  }
+}
+
 .close {
     color: #aaa;
     float: right;
@@ -145,8 +166,8 @@
     position: fixed;
     top: 0px;
     left: 0px;
-    width: 15%;
-    margin-left: 150px;
+    /*width: 15%;
+    margin-left: 150px;*/
 }
 
 a{
@@ -178,7 +199,7 @@ input[type="text"],.input[type="email"],input[type="password"] {
     border-radius: 2px; 
     padding: 16px; 
     position: fixed; 
-    z-index: 1; 
+    z-index: 99999; 
     left: 50%; 
     bottom: 30px;
 }
@@ -215,7 +236,6 @@ input[type="text"],.input[type="email"],input[type="password"] {
     overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
 .topnav a {
     float: left;
     display: block;
@@ -226,13 +246,11 @@ input[type="text"],.input[type="email"],input[type="password"] {
     font-size: 17px;
 }
 
-/* Change the color of links on hover */
 .topnav a:hover {
     background-color: #ddd;
     color: black;
 }
 
-/* Add a color to the active/current link */
 .topnav a.active {
     background-color: #4CAF50;
     color: white;
@@ -247,13 +265,11 @@ input[type="text"],.input[type="email"],input[type="password"] {
     cursor: pointer;
 }
 
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
     display: inline-block;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     display: none;
     position: absolute;
@@ -263,7 +279,6 @@ input[type="text"],.input[type="email"],input[type="password"] {
     z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -271,15 +286,12 @@ input[type="text"],.input[type="email"],input[type="password"] {
     display: block;
 }
 
-/* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #f1f1f1}
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
 }
