--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
     height: auto;
     background: #ff9c33;
     padding: 20px;
-    background-image: url("fondoPagina.jpg");
+    background-image: url("resources/fondoPagina.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
